rendue des project / manque lalignement https://github.com/dixplo/Projet-Board/issues/33

--- a/app/styles/second.scss
+++ b/app/styles/second.scss
@@ -192,3 +192,15 @@ body {
 #message{
   visibility: hidden;
 }
+
+// Profil developer 
+
+.developerProfilGrid {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: flex-end;
+}
+
+
+// Fin CSS Profil developer 
